@startuml ModulesVisualiser

title "Go modules visualiser"

interface IVisualiser {
    + visualise(): void
    + readFiles(files []string): void
    + readFolder(path string): void
}

class FileModules {
    + modules: []string
    + file: string
    + hash: hash64
}

class Visualiser {
    + files: []string
    - fileModules: map[string]FileModules
    - graph: Graph
    --
    + readFiles(files []string): void
    + readFolder(path string): void
}

class VisualiserConsole {
    + visualise(): void
}

class VisualiserPUML {
    + visualise(): void
}

class FilePattern {
    + pattern: string
    + regex: Regex
}

class RequirementNode {
    url string
    childs map[string]Requirement
}

class Requirement {
    + root RequirementNode
    --
    + addRequirement(Requirement)
}


class FileMod {
    - requirementsRoot: Requirement
    --
    + getRequirements(): err
}
VisualiserConsole --|> Visualiser
VisualiserPUML --|> Visualiser
Visualiser ..|> IVisualiser
Visualiser ..> FilePattern
FileModules "1" --* Visualiser
Visualiser ..> FileMod

RequirementNode "1" -- "*" RequirementNode
Requirement --o RequirementNode
FileMod --o Requirement


@enduml